# shift-scheduler

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-0459cd13674c4dbfeadfc82bf6654b538c4a4c466e38e713e9bac60efa87e797.json  query-04abe26d3c063fefb826870e784bc49e261b72902ad203a2dbb09543af4d8090.json  query-06045751138dd9b058ee76a6b713d66b4eb1c15158086db2a375863205a898d7.json  query-11440541c199d6470697947b1bfb1f0cb7af67159748dd84fdbd382ba22407e0.json  query-17e5fa4ecc05beca1c6c260697f51b140cdeebdd6effd7a38b382668270f6938.json  query-1845dc45ba074190a30da50cd15f5b5132a70bcb75e6af4220a8dc45f41da0eb.json  query-27ab4009ebfb77ec076abf6ae794f01071a5fee5c34378261346c39196a9ed5e.json  query-37dc79dd99159cab1f5d2949eb91e921b32d3537f41cb6ca831950a65e0477ff.json  query-41057bc859b3cd432ca8a283331e88267ccc44aab597276aca4bf1eb06642c7f.json  query-467901fa59b39c37b81147138e91e51678ec05d544f025c573ae20d3d65379e1.json  query-4c383c439555b9d12a911f120d1a7ba1372808fa48fb525ea0b711cc52da990d.json  query-4dad07aae6c4232bd4cb3f9d47c90264672a4d871e4d3e0a852cfcfd483a8cd9.json  query-507b911f275fb209001e3cc045dcc1d2e669fd598c65ddbae5be6fa642082b7e.json  query-671e5d7653bf57b1684eb0e8c7303a75ef8b8838e216c01bcd9586c7116e1097.json  query-7f559cdc71cc601958d4874375d074354f079f3bf9fcafab3f776d8dd45389b0.json  query-8077e77a3d4309033f3310f5822fbed2573e594be66bcc1e2093d21814753184.json  query-96e9ea9c4096dab7a73793a2e0a25542a4cf4d86bbb5c233b0e2cb0b8cddcba8.json  query-9a6f2f0e2732096d9a4822e2fc3cf0f674f135adc94f04f01f1d33d48ce1de2c.json  query-b626f7e4ef100cf52f045d3ba823bda5769e2c400f539564a299a4666f46f0ac.json  query-ba525dc6f771fa856bcac350b374b0ef6a778c64fea6f58630c3cffc9ff8050a.json  query-c4a71bf050be570f02988cc2547c8a1f6a6d5cfbf74c5aa43d668b38f930edce.json  query-cc8ea75c02de5e34730e13f7ad6611a519c2259bb76a0e65b3fa1a28cdd5d27e.json  query-cda1b3568dc8b7745df1bc9a8cfea6db8dde01c930235c9a2330c18acb799402.json  query-ceeb3a2cfbce6c40f95094f2a8abf1ef0608c22c7fef2ed571994ef409124caf.json  query-d076d08af8e6bb7e10cf8bf47e0f9c0af86c1d3663bf541b27bdb1302c2a3ad3.json  query-d16548e147588c19d56b0ccd250b905fd436df540b7b148d7a2c9e975b753257.json  query-d8f874683701a69812280d832a663c1f0a04cd49d6df15c6cc4d4a4eeecd8e44.json  query-ded18ae3d271c2fc15d0c8cb6a9c5ed005d9f94d9f4b70bfcbd13a8e5f54a4ed.json  query-e797eab46896ae2016d93c25bab4e0a1910eb6f292c4c003b826d56dd7f0cb7d.json  query-ee24f82391c0f09bc2774b5f0545dc54cb0f98ff5f74d51ecaa3e73947115a67.json
data-service/: Cargo.toml  Dockerfile
data-service/migrations/: 1-init.sql  1_init.sql
data-service/src/: error.rs  infrastructure.rs  main.rs
data-service/src/api/: state.rs
data-service/src/api/handler/: group.rs  membership.rs  staff.rs
data-service/src/domain/: group.rs  membership.rs  staff.rs
data-service/src/infrastructure/: cache.rs  group.rs  membership.rs  staff.rs
data-service/src/infrastructure/cache/: client.rs  group.rs  membership.rs  staff.rs
data-service/tests/: api_tests.rs
docker/: init-db.sh  seed.sh
nginx/: nginx.conf
sample-data/: groups.json  memberships.json  staff.json
sample_data/: groups.json  staff.json
scheduling-service/: Cargo.toml  Dockerfile  scheduling.toml
scheduling-service/migrations/: 1-init.sql  1_init.sql
scheduling-service/src/: domain.rs  error.rs  infrastructure.rs  main.rs
scheduling-service/src/api/: state.rs
scheduling-service/src/api/handler/: schedule.rs
scheduling-service/src/domain/: circuit_breaker.rs  client.rs  job.rs  job_state.rs  scheduler.rs  service.rs
scheduling-service/src/infrastructure/: circuit_breaker.rs  client.rs  health_check.rs  job.rs
scheduling-service/tests/: api_tests.rs
shared/: Cargo.toml
shared/src/: lib.rs  responses.rs  shutdown.rs  telemetry.rs  time.rs  types.rs
