[package]
name = "data-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
uuid = { version = "1.20.0", features = ["serde"] }
thiserror = { version = "2.0.18" }
async-trait = { version = "0.1.89" }
tracing = { version = "0.1.44" }
tower-http = { version = "0.6.8", features = ["trace"] }
shared = { path = "../shared" }
