[package]
name = "scheduling-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
uuid = { version = "1.21.0", features = ["serde"] }
thiserror = { version = "2.0.18" }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
async-trait = { version = "0.1.89" }
tracing = { version = "0.1.44" }
tower-http = { version = "0.6.8", features = ["trace"] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-http = { version = "0.31.0" }
tracing-opentelemetry = { version = "0.32.1" }
shared = { path = "../shared" }
